修改项目名称

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Build
-        run: pnpm run build
+        run: pnpm run build:github
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
