--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node ./scripts/build.cjs",
     "build:github": "vite build --mode github",
     "preview": "vite preview"
   },
@@ -26,9 +26,13 @@
     "vue": "^3.4.23"
   },
   "devDependencies": {
+    "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-vue": "^5.0.4",
+    "rollup-plugin-visualizer": "^5.12.0",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.9"
+    "vite": "^5.2.9",
+    "vite-bundle-analyzer": "^0.9.4",
+    "vite-plugin-compression2": "^1.1.0"
   }
 }
