--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node ./scripts/build.cjs",
+    "build": "vite build",
     "build:github": "vite build --mode github",
+    "build:legacy": "vite build && node ./scripts/build.cjs",
     "preview": "vite preview"
   },
   "dependencies": {
