--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:github": "vite build --mode github",
-    "build:legacy": "vite build && node ./scripts/build.cjs",
+    "build:legacy": "vite build --mode legacy && node ./scripts/build.cjs",
     "preview": "vite preview"
   },
   "dependencies": {
